# Fairness-in-LLMs

./: .gitignore  README.md  pyproject.toml
configs/: lora_studies.yaml  offline_demo.json  vm_finetune_lora_pythia_160m.json  vm_finetune_lora_pythia_160m_seed29_ep4.json  vm_finetune_lora_pythia_160m_seed41_ep4.json  vm_finetune_lora_pythia_160m_seed53_ep4.json  vm_main_pythia_410m.json  vm_rag_local.json  vm_smoke_pythia_160m.json
data/pile_sample/: members.jsonl  nonmembers.jsonl
docs/: DATASETS_AND_MODELS.md  SUPERVISOR_UPDATE_PAN17_MULTISEED.md  VM_HANDOFF.md  prd_fair_privacy_llm.md  technical_requirements.md
examples/: tiny_members.jsonl  tiny_nonmembers.jsonl
fair_mia/: __init__.py
outputs/offline_demo/: overlap_report.json  results.jsonl  run_manifest.json  summary.csv
outputs/vm_finetune_lora_pythia_160m/: run_manifest.json  summary.csv
outputs/vm_finetune_lora_pythia_160m_seed29_ep4/: overlap_report.json  run_manifest.json  summary.csv
outputs/vm_finetune_lora_pythia_160m_seed41_ep4/: run_manifest.json  summary.csv
outputs/vm_finetune_lora_pythia_160m_seed53_ep4/: run_manifest.json  summary.csv
scripts/: cache_lora_assets.ps1  cache_lora_assets.sh  run_lora_studies.ps1  run_lora_studies.sh  run_pan17_multiseed_ep4.sh  vm_setup.ps1  vm_setup.sh
src/fair_mia/: __init__.py  (+13 more)
tests/: test_attacks.py  test_data_preparation.py  test_finetune.py  test_huggingface_adapter.py  test_metrics.py  test_offline_pipeline.py  test_overlap.py  test_progress.py  test_rag_attribution.py  test_study_config.py  test_sweep_aggregation.py  test_variants.py
(+331 files in other folders)
