[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fair-mia"
version = "0.1.0"
description = "Offline scaffold for fairness-aware membership inference benchmarking in LLM workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
research = [
  "accelerate",
  "datasets",
  "numpy",
  "pandas",
  "peft",
  "pytest",
  "safetensors",
  "scikit-learn",
  "tqdm",
  "torch",
  "transformers",
]

[project.scripts]
fair-mia = "fair_mia.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
