[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fair-mia"
version = "0.2.0"
description = "Study-driven fairness-aware membership inference benchmarking for fine-tuned LLMs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
research = [
  "accelerate>=1.1",
  "bitsandbytes>=0.45",
  "datasets<5",
  "huggingface-hub>=0.30",
  "matplotlib>=3.8",
  "numpy",
  "pandas",
  "peft>=0.15",
  "PyYAML>=6",
  "pytest",
  "safetensors",
  "scikit-learn",
  "sentencepiece",
  "tqdm",
  "torch",
  "transformers>=4.51",
]

[project.scripts]
fair-mia = "fair_mia.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
